trash fragment, swipe , delete now:

--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
+    android:background="@drawable/rounded_bottom_sheet"
+
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="16dp">
@@ -9,26 +11,31 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="are you sure to delete this items?"
-        android:textSize="25sp" />
+        android:text="@string/are_you_sure_to_delete_this_items"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
         android:orientation="horizontal">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button1"
             android:layout_width="wrap_content"
+            android:textAllCaps="false"
             android:layout_height="wrap_content"
-            android:text="yes" />
+            android:text="@string/yes" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
+
             android:layout_marginStart="10dp"
-            android:text="no" />
+            android:text="@string/no" />
     </LinearLayout>
 
 </LinearLayout>
