--- a/app/src/main/res/drawable/rounded_bottom_sheet.xml
+++ b/app/src/main/res/drawable/rounded_bottom_sheet.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#7D7D7D" />
-    <corners android:radius="16dp" />
+    <solid android:color="@color/dark_blue" />
+    <corners
+        android:topLeftRadius="32dp"
+        android:topRightRadius="32dp" />
 </shape>
