--- a/app/src/main/res/layout/trash_fragment.xml
+++ b/app/src/main/res/layout/trash_fragment.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.TrashFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:spanCount="1"
         tools:itemCount="5"
-        tools:listitem="@layout/item_news_deleted"
-        android:layout_height="match_parent" />
+        tools:listitem="@layout/item_news_deleted" />
+
+    <include
+        android:id="@+id/no_feed"
+        layout="@layout/no_feed_availabe"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
