--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#FF1F4F59</color>
+    <color name="gray">#DCDCDC</color>
+    <color name="dark_gray">#383838</color>
 </resources>
