--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -3,12 +3,12 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="@android:color/darker_gray"
+    card_view:cardBackgroundColor="@color/gray"
     card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="4dp"
-    card_view:contentPaddingBottom="4dp"
-
-    card_view:cardUseCompatPadding="true">
+    card_view:cardElevation="8dp"
+    android:layout_margin="4dp"
+    card_view:cardUseCompatPadding="false"
+    card_view:contentPaddingBottom="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -26,16 +26,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/share_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_margin="8dp"
-            android:layout_marginHorizontal="10dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
             android:src="@drawable/ic_baseline_share_24"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/imageView" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
@@ -49,11 +47,12 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:layout_margin="4dp"
+            android:lines="4"
+            android:ellipsize="end"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@id/imageView"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
